--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+body {
+    background-color: #000000;
+    color: #ffffff;
+}
