--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,27 @@ header {
         display: none;
     }
 }
+
+/* 
+*FOOTER
+ */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background: linear-gradient(to bottom, black 0%, grey 200%);
+}
+
+footer p {
+    font-size: 14px;
+    font-weight: 300;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+/* @media only screen and (max-width:700px) {
+    footer p {
+        display: none;
+    }
+} */
