--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+    --primary-color: #35858B;
+    --secondary-color: #4FBDBA;
+    --ternary-color: #AEFEFF;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -13,8 +19,4 @@ body {
 a {
     color: white;
     text-decoration: none;
-}
-
-.header-login a:hover {
-    border-bottom: 1px solid white;
 }
